✨ feat: Solve Debts from Order Constructor